fix: adjust body styles for maximum width and prevent vertical overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -145,7 +145,7 @@
 
   body {
     font-family: "Poppins", sans-serif;
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground max-w-svw overflow-x-hidden;
   }
 
   html {
